syntax = "proto3";

package go.micro.srv.auth.token;

service Token {
    rpc Generate(ReqKey) returns (Rsp) {}
    rpc Verify(ReqToken) returns (Rsp) {}
}

message ReqKey {
    string key = 1;
}

message ReqToken {
    string token = 1;
}

message Rsp {
    string token = 1;
    bool verified = 2;
}